--- a/package.json
+++ b/package.json
@@ -2,24 +2,19 @@
 	"name": "spoken-js",
 	"displayName": "spoken-js",
 	"description": "An extension to refocus JS development around talking about logic instead of raw code",
-	"version": "0.0.1",
+	"version": "1.0.0",
+	"publisher": "cmstead",
 	"engines": {
-		"vscode": "^1.33.0"
+		"vscode": "^1.32.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
 	],
 	"main": "./extension.js",
 	"contributes": {
-		"commands": [
-			{
-				"command": "extension.helloWorld",
-				"title": "Hello World"
-			}
-		]
+		"commands": []
 	},
 	"scripts": {
 		"postinstall": "node ./node_modules/vscode/bin/install",
@@ -31,5 +26,11 @@
 		"eslint": "^5.13.0",
 		"@types/node": "^10.12.21",
 		"@types/mocha": "^2.2.42"
-	}
+	},
+	"snippets": [
+		{
+			"language": "javascript",
+			"path": "./snippets/spoken-js.json"
+		}
+	]
 }
