Fixed contributed snippets

--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
 	],
 	"main": "./extension.js",
 	"contributes": {
-		"commands": []
+		"commands": [],
+		"snippets": [
+			{
+				"language": "javascript",
+				"path": "./snippets/spoken-js.json"
+			}
+		]
 	},
 	"scripts": {
 		"postinstall": "node ./node_modules/vscode/bin/install",
@@ -26,11 +32,5 @@
 		"eslint": "^5.13.0",
 		"@types/node": "^10.12.21",
 		"@types/mocha": "^2.2.42"
-	},
-	"snippets": [
-		{
-			"language": "javascript",
-			"path": "./snippets/spoken-js.json"
-		}
-	]
+	}
 }
