--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "articulate-js",
 	"displayName": "Articulate JS",
-	"description": "An extension to refocus JS development around talking about logic instead of raw code",
+	"description": "Code Like You Talk -- Articulate JS is a tool to help developers talk about code and write software in a more conversational way. The goal is, not only, to make pairing and mobbing easier while working with Javascript, but to also create a meta-interface for developers to use",
 	"version": "1.1.3",
 	"publisher": "cmstead",
 	"repository": {
