--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"version": "1.1.3",
 	"publisher": "cmstead",
 	"repository": {
-		"url": "https://github.com/cmstead/articulate-js.git"
+		"url": "https://github.com/cmstead/articulate-js.git",
+		"type": "git"
 	},
 	"engines": {
 		"vscode": "^1.32.0"
@@ -13,6 +14,7 @@
 	"categories": [
 		"Other"
 	],
+	"icon": "images/articulate-js.png",
 	"activationEvents": [
 		"onCommand:cmstead.articulate-js.assign",
 		"onCommand:cmstead.articulate-js.return",
